--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@ layout: home
 search_exclude: true
 image: images/logo.png
 ---
-Hello World!
-I have a blog!!![^1]
+# Hello World!
 
-[^1]: This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
+I have a *blog!!!
+
+This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
 
 # Posts
