--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ image: images/logo.png
 ---
 # Hello World!
 
-I have a *blog!!!
+I have a *blog*!!!
 
 This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
 
