deploy: eeac3b4a1d9859c011c029ae9e48755b6f9a0c13

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ window.onload = wrap_img;
       <div class="wrapper">
         <div class="home"><h1 id="hello-world">Hello World!</h1>
 
-<p>I have a *blog!!!</p>
+<p>I have a <em>blog</em>!!!</p>
 
 <p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
 
